src/test/deca/syntax/valid/objet/ClassDeclExtensions.deca
// Description : test déclaration d'une classe aavec extension
// Resultats : ok

class Thing extends Objet {
}
