src/test/deca/syntax/invalid/objet/ClassSansNom.deca
// extraneous input 'extends' expecting IDENT
// Description : classe sans nom
// Resultat : erreur en ligne 6: une déclaration de classe a besoin d'un nom


class extends Objets{
}
